# pre-commit-dir-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  dir-checker-config.yaml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: release.yaml  test.yml
dir_checker/: __init__.py  __main__.py  main.py
examples/: README.md
examples/directory-configs/: README.md  generic-project-config.yaml  terraform-infrastructure-config.yaml
examples/pre-commit-configs/: README.md  basic-config.yaml  terraform-infrastructure.yaml
tests/: test_directory_checker.py
